@@ -5,6 +5,7 @@ changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 Version 1.5.7+svn:
   * Graphics:
     * Fixed a glitch where a new dialog didn't show up after an old dialog.
+    * Spacebar closes the dialogs without a scrollbar again.
   * Language and translations
     * updated translations: Slovak.
 
