@@ -14,5 +14,6 @@ The release team should empty this file after each release.
 
 Many improvements in the new dialog code:
 - Fixed a glitch where a new dialog didn't show up after an old dialog.
+- Spacebar closes the dialogs without a scrollbar again.
 
 ***
